--- a/SimTECH/SimTECH/Pages/Leagues/Index.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/Index.razor
@@ -205,7 +205,7 @@
         var dialog = await _dialogService.ShowAsync<LeagueEditor>(
             "Modify league",
             parameters,
-            new DialogOptions { MaxWidth = MaxWidth.ExtraLarge });
+            new DialogOptions { MaxWidth = MaxWidth.Large });
         var result = await dialog.Result;
 
         if (!result.Canceled && result.Data != null && result.Data is League updatedLeague)
