--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Components/DevelopSettings.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Components/DevelopSettings.razor
@@ -16,10 +16,10 @@
     <MudTooltip Text="For whom the development is run">
         <MudText Typo="Typo.subtitle1">Entrant</MudText>
     </MudTooltip>
-    <MudChipSet SelectedChipChanged="EntrantChipChanged" Mandatory="true" Class="d-flex flex-row">
-        <MudChip Color="Color.Primary" Value="Entrant.Driver" Default="true" Class="flex-1">Driver</MudChip>
-        <MudChip Color="Color.Primary" Value="Entrant.Team" Class="flex-1">Team</MudChip>
-        <MudChip Color="Color.Primary" Value="Entrant.Engine" Class="flex-1">Engine</MudChip>
+    <MudChipSet SelectedChipChanged="EntrantChipChanged" Mandatory="true" Class="d-flex flex-row flex-stretch-items">
+        <MudChip Color="Color.Primary" Value="Entrant.Driver" Default="true">Driver</MudChip>
+        <MudChip Color="Color.Primary" Value="Entrant.Team">Team</MudChip>
+        <MudChip Color="Color.Primary" Value="Entrant.Engine">Engine</MudChip>
     </MudChipSet>
 </MudStack>
 
