--- a/SimTECH/SimTECH/Pages/Traits/Assignment/TraitAssign.razor
+++ b/SimTECH/SimTECH/Pages/Traits/Assignment/TraitAssign.razor
@@ -202,7 +202,7 @@
                 {
                     List<Team> teams;
                     if (leagueFilter != 0)
-                        teams = await _teamService.GetLeagueTeams(leagueFilter);
+                        teams = await _teamService.GetTeamsFromLeague(leagueFilter);
                     else
                         teams = await _teamService.GetTeams();
 
