--- a/SimTECH/SimTECH/Pages/Leagues/Dialogs/LeagueEditor.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/Dialogs/LeagueEditor.razor
@@ -6,6 +6,8 @@
     <TitleContent>
         <MudText Typo="Typo.h3">Modify league</MudText>
         <MudText Typo="Typo.body2">
+            Odds: input is the upper bound, if the random number is 0 then action will apply (so 0 means guaranteed).
+            <br />
             For the development ranges: the range which will be used is the first comparer ('less than') which is equal or less than 
             the corresponding value. (For a skill of 31, it would take the first comparer which is equal or less than 31.)
             <br />
@@ -16,34 +18,37 @@
     <DialogContent>
         @if (!loading)
         {
+            @if (errorValidations.Any())
+            {
+                <MudList>
+                    <MudListSubheader>Error messages</MudListSubheader>
+                    @foreach (var error in errorValidations)
+                    {
+                        <MudListItem>
+                            <MudText Color="Color.Error">@error</MudText>
+                        </MudListItem>
+                    }
+                </MudList>
+            }
             <MudGrid>
                 <MudItem xs="4">
                     <MudText Typo="Typo.subtitle1">League settings</MudText>
                     <MudDivider />
-                    <MudTextField T="string" @bind-Value="Model.Name" Label="Name" Class="field-md" />
-                    <MudNumericField T="int"
-                                     @bind-Value="Model.RaceLength"
+                    <MudTextField @bind-Value="Model.Name" Label="Name" Class="field-md" />
+                    <MudNumericField @bind-Value="Model.RaceLength"
                                      Min="0"
                                      Step="10"
                                      Label="Length (km)"
                                      HelperText="Should round to nearest ten"
                                      Validation="@(new Func<int, string?>(LengthValidator))"
                                      Class="field-md" />
+                    <MudNumericField @bind-Value="Model.BattleRng"
+                                     Min="0"
+                                     Label="Battle RNG"
+                                     Class="field-md" />
                 </MudItem>
-                <MudItem xs="4">
-                    <MudText Typo="Typo.subtitle1">Weighted development ranges</MudText>
-                    <MudDivider />
-                    @if (!loading)
-                    {
-                        <MudChipSet @bind-SelectedValues="selectedAspects" MultiSelection="true" Filter="true">
-                            @foreach (var aspect in rangeables)
-                            {
-                                <MudChip Text="@aspect.ReadableAspect()" Value="@aspect" Color="Color.Primary" />
-                            }
-                        </MudChipSet>
-                    }
-
-                    <MudText Typo="Typo.subtitle1" Class="mt-2">Options</MudText>
+                <MudItem xs="3">
+                    <MudText Typo="Typo.subtitle1">Toggles</MudText>
                     <MudDivider />
                     <MudStack Class="mt-2">
                         <MudSwitchM3 @bind-Checked="Model.UsePenalty"
@@ -51,13 +56,11 @@
                                      ThumbOffIcon="@Icons.Material.Filled.Close"
                                      Label="Penalties"
                                      Color="Color.Secondary" />
-
                         <MudSwitchM3 @bind-Checked="Model.EnableFatality"
                                      ThumbIcon="@Icons.Material.Filled.Done"
                                      ThumbOffIcon="@Icons.Material.Filled.Close"
                                      Label="Fatalities"
                                      Color="Color.Secondary" />
-
                         <MudSwitchM3 @bind-Checked="Model.AllowContracting"
                                      ThumbIcon="@Icons.Material.Filled.Done"
                                      ThumbOffIcon="@Icons.Material.Filled.Close"
@@ -65,12 +68,11 @@
                                      Color="Color.Secondary" />
                     </MudStack>
                 </MudItem>
-                <MudItem xs="4">
+                <MudItem xs="5">
                     <MudText Typo="Typo.subtitle1">Available tyres for league<span style="color:red">*</span></MudText>
                     <MudDivider />
 
-                    <MudTable T="Tyre"
-                              @bind-SelectedItems="@selectedTyres"
+                    <MudTable @bind-SelectedItems="@selectedTyres"
                               Items="@Tyres"
                               MultiSelection="true"
                               SelectOnRowClick="true"
@@ -104,32 +106,65 @@
                         </RowTemplate>
                     </MudTable>
                 </MudItem>
-                @if (errorValidations.Any())
-                {
-                    <MudItem xs="12">
-                        <MudList>
-                            <MudListSubheader>Error messages</MudListSubheader>
-                            @foreach (var error in errorValidations)
-                            {
-                                <MudListItem>
-                                    <MudText Color="Color.Error">@error</MudText>
-                                </MudListItem>
-                            }
-                        </MudList>
-                    </MudItem>
-                }
-            </MudGrid>
-            <MudStack Row="true" Justify="Justify.SpaceEvenly" Class="flex-wrap ">
-                @if (selectedAspects != null)
-                {
-                    @foreach (var aspectRange in selectedAspects.Cast<Aspect>())
+                <MudItem xs="4">
+                    <MudText Typo="Typo.subtitle1">Configurations</MudText>
+                    <MudDivider />
+                    @if (Model.EnableFatality)
                     {
-                        <MudPaper Elevation="5" Width="500px">
-                            <RangeInput Items="@(weightedAspects[aspectRange])" RangeType="@aspectRange" />
-                        </MudPaper>
+                        <MudNumericField @bind-Value="Model.FatalityOdds"
+                                         Min="0"
+                                         Label="Fatal incident odds"
+                                         Class="field-md" />
                     }
-                }
-            </MudStack>
+                    <MudNumericField @bind-Value="Model.DisqualificationOdds"
+                                     Min="0"
+                                     Label="Disqualification odds"
+                                     Class="field-md" />
+                    <MudNumericField @bind-Value="Model.SafetyCarOdds"
+                                     Min="0"
+                                     Label="Safety car odds"
+                                     Class="field-md" />
+                    <MudNumericField @bind-Value="Model.SafetyCarReturnOdds"
+                                     Min="0"
+                                     Label="Safety car return odds"
+                                     Class="field-md" />
+                    <MudNumericField @bind-Value="Model.SafetyCarGap"
+                                     Min="1"
+                                     Label="Gap drivers safety car"
+                                     Class="field-md" />
+                    <MudNumericField @bind-Value="Model.DriverStatusPaceModifier"
+                                     Min="0"
+                                     Label="Main/support driver pace modifier"
+                                     Class="field-md" />
+                </MudItem>
+                <MudItem xs="8" Style="min-height: 500px">
+                    <MudText Typo="Typo.subtitle1">Weighted development ranges</MudText>
+                    <MudDivider />
+                    @if (!loading)
+                    {
+                        <MudStack Row="true" Class="pa-0">
+                            <MudChipSet @bind-SelectedChip="selectedChip"
+                                        Filter="true"
+                                        Class="d-flex flex-column flex-wrap mt-3"
+                                        Style="height: 200px; width: 250px">
+                                @foreach (var aspect in rangeables)
+                                {
+                                    <MudChip Text="@aspect.ReadableAspect()"
+                                             Value="@aspect"
+                                             Color="Color.Secondary"
+                                             Style="width: 100px" />
+                                }
+                            </MudChipSet>
+                            @if (selectedChip != null && selectedChip.Value is Aspect selectedAspect)
+                            {
+                                <RangeInput @bind-Items="@(weightedAspects[selectedAspect])"
+                                            RangeType="@selectedAspect"
+                                            Style="@("width: calc(100% - 250px)")"/>
+                            }
+                        </MudStack>
+                    }
+                </MudItem>
+            </MudGrid>
         }
     </DialogContent>
     <DialogActions>
@@ -139,6 +174,9 @@
 </MudDialog>
 
 @code {
+    private int halfAmountAspects = AspectEnumHelper.GetRangeableAspects.Length / 2;
+    private static readonly Aspect[] rangeables = AspectEnumHelper.GetRangeableAspects;
+
     [CascadingParameter] protected MudDialogInstance? LeagueDialog { get; set; }
 
     [Parameter] public League? League { get; set; }
@@ -146,13 +184,13 @@
 
     private EditLeagueModel Model;
     private bool loading = true;
-    int advanceDistance;
+    private int advanceDistance;
 
     private Dictionary<Aspect, List<EditRangeModel>> weightedAspects = new();
     private HashSet<Tyre> selectedTyres = new();
 
-    private static readonly Aspect[] rangeables = AspectEnumHelper.GetRangeableAspects;
-    private ICollection<object>? selectedAspects { get; set; }
+    private MudChip? selectedChip;
+
     private List<string> errorValidations = new();
 
     protected override void OnInitialized()
@@ -166,8 +204,6 @@
         {
             foreach (var developGroup in Model.DevelopmentRanges.OrderBy(e => (int)e.Type).GroupBy(e => e.Type))
                 weightedAspects[developGroup.Key].AddRange(developGroup);
-
-            selectedAspects = Model.DevelopmentRanges.Select(e => e.Type).Distinct().Cast<object>().ToList();
 
             foreach (var leagueTyre in Model.LeagueTyres)
             {
@@ -216,10 +252,14 @@
         if (!RunValidations())
             return;
 
-        var activeAspects = selectedAspects?.Cast<Aspect>().ToList() ?? new();
-        Model.DevelopmentRanges = weightedAspects.Where(e => activeAspects.Contains(e.Key)).SelectMany(e => e.Value).ToList();
+        Model.DevelopmentRanges = weightedAspects
+            .Where(e => e.Value.Any())
+            .SelectMany(e => e.Value)
+            .ToList();
 
-        Model.LeagueTyres = selectedTyres.Select(e => new EditLeagueTyreModel { LeagueId = Model.Id, TyreId = e.Id }).ToList();
+        Model.LeagueTyres = selectedTyres
+            .Select(e => new EditLeagueTyreModel { LeagueId = Model.Id, TyreId = e.Id })
+            .ToList();
 
         if (Model.IsDirty)
         {
