--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Index.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Index.razor
@@ -94,18 +94,18 @@
 
     public OverviewModel OverviewModel { get; set; } = new();
 
-    Race? NextRace { get; set; }
-    List<League> Leagues { get; set; } = new();
-    List<Climate> Climates { get; set; } = new();
-    List<Trait> Traits { get; set; } = new();
+    private Race? NextRace { get; set; }
+    private List<League> Leagues { get; set; } = new();
+    private List<Climate> Climates { get; set; } = new();
+    private List<Trait> Traits { get; set; } = new();
 
-    int activeTabIndex;
-    int driverStatusMod;
-    bool loading = true;
-    int nextRound;
+    private int activeTabIndex;
+    private int driverStatusMod;
+    private bool loading = true;
+    private int nextRound;
 
-    bool calendarLoaded = false;
-    bool powerLoaded = false;
+    private bool calendarLoaded = false;
+    private bool powerLoaded = false;
 
     protected override async Task OnInitializedAsync()
     {
